<resources>
    <string name="app_name">Arduino Machine</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Arduino Machine</string>
    <string name="nav_header_subtitle">version 2.0 \nby AntonyProd \nanton2001snake@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Main</string>
    <string name="menu_gallery">Device connect</string>
    <string name="menu_slideshow">Advanced</string>
    <string name="stop">STOP</string>
    <string name="_10">10</string>
    <string name="show">SHOW</string>
    <string name="_6">Led On</string>
    <string name="_7">Led Off</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
</resources>